dataset1235/2025-2/1153765216/users/1581346053/executions/3138746197_291286518.log
== SUBMISSION (2025-08-19 17:06:13)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))
dobro = num*2
# Impressao do dobro do numero
print("O dobro de", num "é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:06:50)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))
dobro = num*2
# Impressao do dobro do numero
print("O dobro de", num, "é:", dobro)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numeroO dobro de 256 é: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numeroO dobro de 1234 é: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numeroO dobro de 5678 é: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numeroO dobro de 444 é: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numeroO dobro de 11 é: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:05:58)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))
dobro = num*2
# Impressao do dobro do numero
print("O dobro de", num "é", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é", dobro)
                            ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é", dobro)
                            ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é", dobro)
                            ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é", dobro)
                            ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é", dobro)
                            ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:06:15)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero"))
dobro = num*2
# Impressao do dobro do numero
print("O dobro de", num "é:", dobro)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 7
    print("O dobro de", num "é:", dobro)
                            ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
